--- a/index.html
+++ b/index.html
@@ -7,10 +7,7 @@
     <div>
         <div id="result">Replace Me</div>
     </div>
-    <script>
-        var total = 50;
-
-        document.getElementById('result').innerHTML = total;
+    <script src="index.js">
     </script>
 </body>
 </html>
